--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "tslog",
-  "version": "1.0.0-dev.3",
+  "version": "1.0.0-dev.4",
   "description": "TypeScript and JavaScript Logger",
-  "main": "index",
-  "typings": "src/index",
+  "main": "dist/index",
+  "typings": "dist/index",
   "scripts": {
     "build": "tsc",
     "eslint": "eslint . --ext .ts",
