--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tslog",
-  "version": "1.0.0-dev.22",
+  "version": "1.0.0",
   "description": "📝 Expressive TypeScript Logger for Node.js: Call locations, pretty Errors, stack traces code frames. JSON output and transports.",
   "main": "dist/index",
   "typings": "dist/index",
