--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tslog",
   "version": "1.0.1",
-  "description": "📝 Expressive TypeScript Logger for Node.js: Call locations, pretty Errors, stack traces code frames. JSON output and transports.",
+  "description": "📝 Expressive TypeScript Logger for Node.js: Pretty errors, stack traces, code frames, and JSON output to attachable transports.",
   "main": "dist/index",
   "typings": "dist/index",
   "scripts": {
