--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "📝 Expressive TypeScript Logger for Node.js: Pretty errors, stack traces, code frames, and JSON output to attachable transports.",
   "main": "dist/index",
   "typings": "dist/index",
+  "engines": {
+    "node": ">=8"
+  },
   "scripts": {
     "ts-node": "ts-node example/index.ts",
     "ts-node-dev": "ts-node-dev example/index.ts",
