--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "ts-node": "ts-node example/index.ts",
-    "ts-node-dev": "ts-node-dev example/index.ts",
+    "ts-node-onchange": "onchange -i \"**/*.ts\" -- npm run ts-node",
     "start": "npm run ts-node",
     "build": "tsc",
     "prepublishOnly": "npm run build && npm run test",
@@ -73,10 +73,10 @@
     "git-hooks": "^1.1.10",
     "jest": "^25.5.0",
     "np": "^6.2.2",
+    "onchange": "^7.0.2",
     "prettier": "^2.0.4",
     "ts-jest": "^25.4.0",
     "ts-node": "^8.9.1",
-    "ts-node-dev": "^1.0.0-pre.44",
     "typedoc": "^0.17.6",
     "typescript": "^3.8.3"
   },
