--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "eslint . --ext .ts",
     "eslint-fix": "eslint . --ext .ts --fix",
     "test": "jest",
+    "coveralls": "jest --coverage && coveralls < coverage/lcov.info\",",
     "docsify-init": "docsify init ./docs",
     "docsify-serve": "cd docs && docsify serve",
     "api-extractor": "tsc && mkdir -p ./docs/api_extractor && api-extractor run --local --verbose",
@@ -64,6 +65,7 @@
     "@types/jest": "^25.2.3",
     "@types/node": "^13.13.8",
     "@types/source-map-support": "~0.5.1",
+    "coveralls": "^3.1.0",
     "docsify": "^4.11.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.11.0",
