--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "ts-node": "ts-node example/index.ts",
     "ts-node-onchange": "onchange -i \"**/*.ts\" -- npm run ts-node",
-    "start": "npm run ts-node",
+    "start-ts": "npm run ts-node",
+    "start": "node dist/example/index.js",
     "build": "tsc",
     "prepublishOnly": "npm run build && npm run test",
     "eslint": "eslint . --ext .ts",
@@ -60,24 +61,24 @@
   },
   "homepage": "https://tslog.js.org",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.7.13",
-    "@rushstack/eslint-config": "^0.5.7",
-    "@types/jest": "^25.2.3",
-    "@types/node": "^13.13.8",
-    "@types/source-map-support": "~0.5.1",
+    "@microsoft/api-extractor": "^7.9.2",
+    "@rushstack/eslint-config": "^1.0.2",
+    "@types/jest": "^26.0.4",
+    "@types/node": "^14.0.23",
+    "@types/source-map-support": "^0.5.2",
     "coveralls": "^3.1.0",
-    "docsify": "^4.11.3",
-    "eslint": "^6.8.0",
+    "docsify": "^4.11.4",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-prettier": "^3.1.3",
+    "eslint-plugin-prettier": "^3.1.4",
     "git-hooks": "^1.1.10",
-    "jest": "^26.0.1",
-    "np": "^6.2.4",
+    "jest": "^26.1.0",
+    "np": "^6.3.2",
     "onchange": "^7.0.2",
     "prettier": "^2.0.5",
-    "ts-jest": "^26.0.0",
-    "ts-node": "^8.10.1",
-    "typedoc": "^0.17.7",
+    "ts-jest": "^26.1.2",
+    "ts-node": "^8.10.2",
+    "typedoc": "^0.17.8",
     "typescript": "^3.9.3"
   },
   "dependencies": {
