--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tslog",
-  "version": "3.0.3",
+  "version": "3.0.4-0",
   "description": "📝 Expressive TypeScript Logger for Node.js: Pretty errors, stack traces, code frames, and JSON output to attachable transports.",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
