--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,25 @@
 {
-  "$schema": "http://json.schemastore.org/tsconfig",
-  "compileOnSave": false,
   "compilerOptions": {
-    "lib": [
-      "es2019",
-      "esnext.bigint",
-      "es2020.string",
-      "es2020.symbol.wellknown"
-    ],
-    "target": "es2019",
+    "declaration": true,
+    "declarationDir": "dist",
     "module": "commonjs",
-    "types": ["node"],
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
+    "target": "es6",
+    "lib": ["dom", "es2017", "es7", "es2019"],
     "strict": true,
-    "suppressImplicitAnyIndexErrors": true,
-    "allowSyntheticDefaultImports": true,
-    "outDir": "dist/cjs"
+    "sourceMap": true,
+    "jsx": "react",
+    "moduleResolution": "node",
+    "allowJs": false,
+    "esModuleInterop": true,
+    "outDir": "./dist",
+    "rootDir": "./src",
   },
   "include": [
-    "src/*.ts",
-    "src/**/*.ts"
+    "src/**/*"
   ],
-  "exclude": ["node_modules","**/node_modules", "**/dist", "**/test", "*.test.ts"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "src/**/*.test.tsx"
+  ]
 }
