--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.13.2",
     "@rushstack/eslint-config": "^2.3.2",
+    "@typescript-eslint/types": "^4.21.0",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.33",
     "@types/source-map-support": "^0.5.3",
