--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "esModuleInterop": true,
     "outDir": "./dist",
     "rootDir": "./src",
+    "noImplicitAny": false
   },
   "include": [
     "src/**/*"
