--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
   "exclude": [
     "node_modules",
     "dist",
-    "src/**/*.test.tsx"
+    "src/**/*.test.tsx",
+    "src/**/*.test.ts"
   ]
 }
