--- a/package.json
+++ b/package.json
@@ -65,8 +65,9 @@
   "devDependencies": {
     "@microsoft/api-extractor": "^7.12.0",
     "@rushstack/eslint-config": "^2.3.1",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^14.14.9",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@types/jest": "^26.0.22",
+    "@types/node": "^14.14.12",
     "@types/source-map-support": "^0.5.3",
     "coveralls": "^3.1.0",
     "docsify": "^4.11.6",
@@ -75,13 +76,18 @@
     "eslint-plugin-prettier": "^3.1.4",
     "git-hooks": "^1.1.10",
     "jest": "^26.6.3",
+    "node-typescript": "^0.1.3",
     "np": "^7.0.0",
     "onchange": "^7.1.0",
     "prettier": "^2.2.0",
     "ts-jest": "^26.4.4",
     "ts-node": "^9.0.0",
     "typedoc": "^0.19.2",
-    "typescript": "^4.1.2"
+    "typescript": "^4.2.4"
+  },
+  "peerDependencies": {
+    "node-typescript": "^0.1.3",
+    "typescript": "^4.2.4"
   },
   "dependencies": {
     "source-map-support": "^0.5.19"
