--- a/package.json
+++ b/package.json
@@ -1,122 +1,47 @@
 {
   "name": "tslog",
-  "version": "3.3.4",
-  "description": "📝 Expressive TypeScript Logger for Node.js: Pretty errors, stack traces, code frames, and JSON output to attachable transports.",
-  "main": "./dist/cjs/index.js",
-  "module": "./dist/esm/index.js",
-  "types": "./dist/types/index.d.ts",
-  "engines": {
-    "node": ">=10"
+  "version": "1.0.0",
+  "description": "",
+  "main": "./dist/nodejs/index.js",
+  "browser": {
+    "tslog": "./dist/browser/index.js",
+    "util": "",
+    "./src/runtime/nodejs.ts": "./src/runtime/browser.ts"
   },
-  "funding": "https://github.com/fullstack-build/tslog?sponsor=1",
+  "type": "module",
+  "exports": "./dist/index.js",
   "scripts": {
-    "ts-node": "ts-node example/index.ts",
-    "ts-node-onchange": "onchange -i \"**/*.ts\" -- npm run ts-node",
-    "start-ts": "npm run ts-node",
-    "start": "node dist/example/index.js",
-    "build": "tsc -b tsconfig.json tsconfig.esm.json tsconfig.types.json",
-    "prepublishOnly": "npm run build && npm run test",
-    "eslint": "eslint . --ext .ts",
-    "eslint-fix": "eslint . --ext .ts --fix",
+    "build": "tsc -b tsconfig.src.json tsconfig.example.json && node build.js",
+    "start": "node example/index.js",
+    "dev-ts": "nodemon --watch './**/*.ts' --exec 'node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm' example/nodejs/index.ts",
+    "dev-js": "tsc -b tsconfig.example.json && node --enable-source-maps --experimental-specifier-resolution=node example/dist/example/nodejs/index.js",
     "test": "jest",
-    "coveralls": "jest --coverage && coveralls < coverage/lcov.info",
-    "docsify-init": "docsify init ./docs",
-    "docsify-serve": "cd docs && docsify serve",
-    "api-extractor": "tsc && mkdir -p ./docs/api_extractor && api-extractor run --local --verbose",
-    "typedoc": "typedoc",
-    "generate-all-docs": "npm run api-extractor && typedoc",
-    "release": "np"
+    "coverage": "jest --coverage",
+    "typedoc": "typedoc"
   },
+  "keywords": [],
+  "author": "Eugene <opensource@terehov.de> (http://fullstack.build/)",
+  "license": "ISC",
   "jest": {
     "verbose": true,
     "preset": "ts-jest",
     "testEnvironment": "node",
     "collectCoverage": true,
+    "clearMocks": true,
     "testMatch": [
-      "/**/*.test.ts",
-      "/**/node_modules_test/*.test.ts"
+      "**/tests/*.test.ts"
     ]
   },
-  "np": {
-    "yarn": false,
-    "contents": "."
-  },
-  "publishConfig": {
-    "access": "public"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/fullstack-build/tslog.git"
-  },
-  "authors": [
-    "Eugene Terehov <eugene@fullstack.build>"
-  ],
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/fullstack-build/tslog/issues"
-  },
-  "homepage": "https://tslog.js.org",
   "devDependencies": {
-    "@microsoft/api-extractor": "^7.19.4",
-    "@rushstack/eslint-config": "^2.5.1",
-    "@types/jest": "^27.4.0",
-    "@types/node": "^16.11.22",
-    "@types/source-map-support": "^0.5.4",
-    "@typescript-eslint/types": "^5.11.0",
-    "coveralls": "^3.1.1",
-    "docsify": "^4.12.2",
-    "eslint": "^8.8.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "git-hooks": "^1.1.10",
-    "jest": "^27.5.1",
-    "np": "^7.6.0",
-    "onchange": "^7.1.0",
-    "prettier": "^2.5.1",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.5.0",
-    "typedoc": "^0.22.11",
-    "typescript": "^4.5.5"
+    "@types/jest": "^29.0.0",
+    "@types/node": "^17.0.29",
+    "esbuild": "^0.15.5",
+    "jest": "^28.1.3",
+    "nodemon": "^2.0.19",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
+    "typedoc": "^0.23.11",
+    "typescript": "^4.7.4"
   },
-  "dependencies": {
-    "source-map-support": "^0.5.21"
-  },
-  "files": [
-    "dist",
-    "src"
-  ],
-  "sideEffects": false,
-  "keywords": [
-    "logger",
-    "typescript",
-    "log level",
-    "json",
-    "stacktrace",
-    "Error.stack",
-    "call location",
-    "debug",
-    "pretty",
-    "log",
-    "log4j",
-    "log4js",
-    "log4ts",
-    "print",
-    "logging",
-    "bunyan",
-    "winston",
-    "stack",
-    "trace",
-    "pretty print",
-    "prettify",
-    "format",
-    "human",
-    "callsites",
-    "callsite",
-    "show error",
-    "handling exceptions",
-    "pretty log",
-    "pretty json",
-    "pretty-error",
-    "sourcemap"
-  ]
+  "dependencies": {}
 }
