--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "type": "module",
   "exports": "./dist/index.js",
   "scripts": {
-    "build": "tsc -b tsconfig.src.json tsconfig.example.json && node build.js",
+    "build": "npm run build-server && npm run build-browser",
+    "build-browser": "node build.js",
+    "build-server": "tsc -b tsconfig.src.json tsconfig.example.json",
     "start": "node example/index.js",
     "dev-ts": "nodemon --watch './**/*.ts' --exec 'node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm' example/nodejs/index.ts",
     "dev-js": "tsc -b tsconfig.example.json && node --enable-source-maps --experimental-specifier-resolution=node example/dist/example/nodejs/index.js",
-    "test": "jest",
+    "test": "jest --HEADLESS=false",
+    "test-puppeteer-serve": "npm run build-browser && node tests/Browser/server/index.cjs -p 4444",
     "coverage": "jest --coverage",
     "typedoc": "typedoc"
   },
@@ -24,20 +27,27 @@
   "license": "ISC",
   "jest": {
     "verbose": true,
-    "preset": "ts-jest",
+    "preset": "./jest-preset.cjs",
+    "testTimeout": 100000,
     "testEnvironment": "node",
     "collectCoverage": true,
     "clearMocks": true,
     "testMatch": [
-      "**/tests/*.test.ts"
+      "**/tests/**/*.test.ts",
+      "**/tests/**/*.test.js"
     ]
   },
   "devDependencies": {
+    "@types/expect-puppeteer": "^5.0.1",
     "@types/jest": "^29.0.0",
+    "@types/jest-environment-puppeteer": "^5.0.2",
     "@types/node": "^17.0.29",
+    "@types/puppeteer": "^5.4.6",
     "esbuild": "^0.15.5",
     "jest": "^28.1.3",
+    "jest-puppeteer": "^6.1.1",
     "nodemon": "^2.0.19",
+    "puppeteer": "^17.1.0",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
     "typedoc": "^0.23.11",
