--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,12 @@
     ],
     "target": "es2020",
     "module": "ES2020",
-    "types": ["node","jest"],
+    "types": [
+      "node",
+      "jest",
+      "puppeteer",
+      "jest-environment-puppeteer",
+      "expect-puppeteer"],
     "moduleResolution": "Node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
