--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "build": "npm run build-server && npm run build-browser",
     "build-browser": "node build.js",
     "build-server": "tsc -b tsconfig.src.json tsconfig.example.json",
-    "start": "node example/index.js",
+    "start": "node --enable-source-maps --experimental-specifier-resolution=node example/dist/example/nodejs/index.js",
     "dev-ts": "nodemon --watch './**/*.ts' --exec 'node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm' example/nodejs/index.ts",
     "dev-js": "tsc -b tsconfig.example.json && node --enable-source-maps --experimental-specifier-resolution=node example/dist/example/nodejs/index.js",
+    "lint": "eslint --ext .js,.ts .",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "test": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest",
     "test-puppeteer-serve": "npm run build-browser && node tests/Browser/server/index.cjs -p 4444",
     "coverage": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest --coverage",
@@ -46,14 +48,20 @@
     "@types/jest-environment-puppeteer": "^5.0.2",
     "@types/node": "^17.0.29",
     "@types/puppeteer": "^5.4.6",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
     "esbuild": "^0.15.5",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "git-hooks": "^1.1.10",
     "jest": "^28.1.3",
     "jest-puppeteer": "^6.1.1",
     "nodemon": "^2.0.19",
+    "prettier": "^2.7.1",
     "puppeteer": "^17.1.0",
     "ts-jest": "^28.0.8",
     "ts-node": "^10.9.1",
-    "typedoc": "^0.23.11",
+    "typedoc": "^0.23.14",
     "typescript": "^4.7.4"
   },
   "dependencies": {}
