Add prettier and ESlint and make them work

--- a/tsconfig.example.json
+++ b/tsconfig.example.json
@@ -4,6 +4,5 @@
   "compilerOptions": {
     "outDir": "example/dist"
   },
-  "include": ["example/nodejs/*.ts"],
-
+  "include": ["example/nodejs/*.ts"]
 }
