--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,18 +2,10 @@
   "$schema": "http://json.schemastore.org/tsconfig",
   "compileOnSave": false,
   "compilerOptions": {
-    "lib": [
-      "es2020",
-      "dom"
-    ],
+    "lib": ["es2020", "dom"],
     "target": "es2020",
     "module": "ES2020",
-    "types": [
-      "node",
-      "jest",
-      "puppeteer",
-      "jest-environment-puppeteer",
-      "expect-puppeteer"],
+    "types": ["node", "jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
     "moduleResolution": "Node",
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
@@ -23,11 +15,5 @@
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true
   },
-  "exclude": [
-    "node_modules",
-    "**/node_modules",
-    "**/dist",
-    "**/test",
-    "*.test.ts"
-  ]
+  "exclude": ["node_modules", "**/node_modules", "**/dist", "**/test", "*.test.ts"]
 }
