--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "esbuild": "^0.15.5",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
-    "git-hooks": "^1.1.10",
+    "husky": "^8.0.1",
     "jest": "^28.1.3",
     "jest-puppeteer": "^6.1.1",
     "nodemon": "^2.0.19",
