--- a/package.json
+++ b/package.json
@@ -1,7 +1,18 @@
 {
   "name": "tslog",
-  "version": "1.0.0",
-  "description": "",
+  "version": "4.0.0-0",
+  "description": "📝 Extensible TypeScript Logger for Node.js and Browser: Dependency free, Fully customizable, Pretty errors, stack traces, and JSON output to attachable transports.",
+  "author": "Eugene <opensource@terehov.de> (http://fullstack.build/)",
+  "license": "",
+  "funding": "https://github.com/fullstack-build/tslog?sponsor=1",
+  "homepage": "https://tslog.js.org",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/fullstack-build/tslog.git"
+  },
+  "bugs": {
+    "url": "https://github.com/fullstack-build/tslog/issues"
+  },
   "main": "./dist/nodejs/index.js",
   "browser": {
     "tslog": "./dist/browser/index.js",
@@ -24,9 +35,9 @@
     "coverage": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest --coverage",
     "typedoc": "typedoc"
   },
-  "keywords": [],
-  "author": "Eugene <opensource@terehov.de> (http://fullstack.build/)",
-  "license": "ISC",
+  "engines": {
+    "node": ">=16"
+  },
   "jest": {
     "verbose": true,
     "preset": "./jest-preset.cjs",
@@ -41,6 +52,13 @@
     "coveragePathIgnorePatterns": [
       "<rootDir>/tests/"
     ]
+  },
+  "np": {
+    "yarn": false,
+    "contents": "."
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "devDependencies": {
     "@types/expect-puppeteer": "^5.0.1",
@@ -57,6 +75,7 @@
     "jest": "^28.1.3",
     "jest-puppeteer": "^6.1.1",
     "nodemon": "^2.0.19",
+    "npm": "^8.19.2",
     "prettier": "^2.7.1",
     "puppeteer": "^17.1.0",
     "ts-jest": "^28.0.8",
@@ -64,5 +83,39 @@
     "typedoc": "^0.23.14",
     "typescript": "^4.7.4"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "sideEffects": false,
+  "keywords": [
+    "logger",
+    "typescript",
+    "log level",
+    "json",
+    "stacktrace",
+    "Error.stack",
+    "call location",
+    "debug",
+    "pretty",
+    "log",
+    "log4j",
+    "log4js",
+    "log4ts",
+    "print",
+    "logging",
+    "bunyan",
+    "winston",
+    "stack",
+    "trace",
+    "pretty print",
+    "prettify",
+    "format",
+    "human",
+    "callsites",
+    "callsite",
+    "show error",
+    "handling exceptions",
+    "pretty log",
+    "pretty json",
+    "pretty-error",
+    "sourcemap"
+  ]
 }
