Add release script

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "test": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest",
     "test-puppeteer-serve": "npm run build-browser && node tests/Browser/server/index.cjs -p 4444",
     "coverage": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest --coverage",
-    "typedoc": "typedoc"
+    "typedoc": "typedoc",
+    "release": "np"
   },
   "engines": {
     "node": ">=16"
