--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "build": "npm run build-server && npm run build-browser",
     "build-browser": "node build.js",
     "build-server": "tsc -b tsconfig.src.json tsconfig.example.json",
-    "start": "node --enable-source-maps --experimental-specifier-resolution=node example/dist/example/nodejs/index.js",
-    "dev-ts": "nodemon --watch './**/*.ts' --exec 'node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm' example/nodejs/index.ts",
-    "dev-js": "tsc -b tsconfig.example.json && node --enable-source-maps --experimental-specifier-resolution=node example/dist/example/nodejs/index.js",
+    "start": "node --enable-source-maps --experimental-specifier-resolution=node examples/dist/example/nodejs/index.js",
+    "dev-ts": "nodemon --watch './**/*.ts' --exec 'node --experimental-specifier-resolution=node --no-warnings --loader ts-node/esm' examples/nodejs/index.ts",
+    "dev-js": "tsc -b tsconfig.example.json && node --enable-source-maps --experimental-specifier-resolution=node examples/dist/example/nodejs/index.js",
     "lint": "eslint --ext .js,.ts .",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "test": "JEST_PUPPETEER_CONFIG=jest-puppeteer.config.cjs jest",
