--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tslog",
-  "version": "4.0.0-0",
+  "version": "4.0.0",
   "description": "📝 Extensible TypeScript Logger for Node.js and Browser: Dependency free, Fully customizable, Pretty errors, stack traces, and JSON output to attachable transports.",
   "author": "Eugene <opensource@terehov.de> (http://fullstack.build/)",
   "license": "",
