--- a/package.json
+++ b/package.json
@@ -84,7 +84,6 @@
     "typedoc": "^0.23.14",
     "typescript": "^4.7.4"
   },
-  "dependencies": {},
   "sideEffects": false,
   "keywords": [
     "logger",
@@ -118,5 +117,8 @@
     "pretty json",
     "pretty-error",
     "sourcemap"
-  ]
+  ],
+  "dependencies": {
+    "npm": "^8.19.2"
+  }
 }
