--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,5 @@
     "removeComments": false,
     "declaration": true
   },
-  "exclude": ["node_modules", "**/node_modules", "**/dist", "**/test", "*.test.ts"]
+  "exclude": ["node_modules", "**/node_modules", "**/dist", "**/test", "*.test.ts", "examples"]
 }
