--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "4.0.1",
   "description": "📝 Extensible TypeScript Logger for Node.js and Browser: Dependency free, Fully customizable, Pretty errors, stack traces, and JSON output to attachable transports.",
   "author": "Eugene <opensource@terehov.de> (http://fullstack.build/)",
-  "license": "",
+  "license": "MIT",
   "funding": "https://github.com/fullstack-build/tslog?sponsor=1",
   "homepage": "https://tslog.js.org",
   "repository": {
