--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,8 @@
   "compilerOptions": {
     "lib": ["es2020", "dom"],
     "target": "es2020",
-    "module": "ES2020",
-    "types": ["node", "jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
     "moduleResolution": "Node",
+    "types": ["node", "jest", "puppeteer", "jest-environment-puppeteer", "expect-puppeteer"],
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "inlineSourceMap": true,
@@ -14,8 +13,7 @@
     "skipLibCheck": true,
     "suppressImplicitAnyIndexErrors": true,
     "allowSyntheticDefaultImports": true,
-    "removeComments": false,
-    "declaration": true
+    "removeComments": true
   },
-  "exclude": ["node_modules", "**/node_modules", "**/dist", "**/test", "*.test.ts", "examples"]
+  "exclude": ["node_modules", "**/node_modules", "**/dist", "**/tests", "*.test.ts", "examples"]
 }
